# UMD-LETKF

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  doc.md
config/: env.hera  env.theia
dep/: CMakeLists.txt  wgrib2.cmake  wgrib2.patch
doc/: CMakeLists.txt  Doxyfile.in
doc_src/pages/: algorithm.md  index.md  inflation.md
docs/: citations.rst  conf.py  configuration.rst  customPlugins.rst  diagnostics.rst  index.rst  inflation.rst  installation.rst  letkf.rst  localizer.rst  obsio.rst  overview.rst  plugins.rst  reference.rst  stateio.rst  support.rst
docs/configuration/: example.rst  index.rst  localization.rst  mpi.rst  observation.rst  solver.rst  state.rst
pkg/: CMakeLists.txt
src/: CMakeLists.txt  getmem.F90  global.f90  kdtree.f90  letkf.F90  letkf.f90  letkf_config.F90  letkf_config_c.cpp  letkf_core.F90  letkf_core.f90  letkf_diag.F90  letkf_driver.F90  letkf_loc.F90  letkf_loc.f90  letkf_loc_novrt.F90  letkf_loc_ocean.F90  letkf_mpi.F90  letkf_mpi.f90  letkf_mpi_g.f90  letkf_obs.F90  letkf_obs.f90  letkf_obs_dat.f90  letkf_obs_nc.F90  letkf_obs_nc.f90  letkf_obs_test.F90  letkf_pluginloader.F90.tmpl  letkf_pluginloader.cmake  letkf_solver.F90  letkf_state.F90  letkf_state.f90  letkf_state_config.F90  letkf_state_helper.F90  letkf_state_nc.F90  letkf_util.F90  running_stats.F90  str.f90  timing.F90  timing.f90
src/cmake/: FindNetCDF.cmake
src/driver/: CMakeLists.txt  letkfdriver.f90
src/module/: CMakeLists.txt  getmem.F90  kdtree.f90  letkf.F90  letkf.f90  letkf_common.f90  letkf_core.f90  letkf_loc.f90  letkf_mpi.F90  letkf_mpi.f90  letkf_mpi_g.f90  letkf_obs.f90  letkf_obs_I.f90  letkf_obs_dat.f90  letkf_obs_nc.f90  letkf_obs_types.f90  letkf_state.f90  letkf_state_generic.f90  letkf_state_nc.f90  letkf_state_o.f90  letkf_state_types.f90  timing.f90
src/subclass.letkf_localizer/: CMakeLists.txt  letkf_loc_novrt.F90  letkf_loc_ocean.F90
src/subclass.letkf_obsio/: CMakeLists.txt  letkf_obs_dat.F90  letkf_obs_nc.F90  letkf_obs_test.F90  letkf_obsio_dat.F90  letkf_obsio_ioda.F90  letkf_obsio_nc.F90  letkf_obsio_test.F90
src/subclass.letkf_stateio/: CMakeLists.txt  letkf_state_grib.F90  letkf_state_nc.F90  letkf_stateio_grib.F90  letkf_stateio_nc.F90
test/: CMakeLists.txt  Makefile  getTestData.sh  letkf.nml  letkf_test.sh  platdef.cfg  statedef.cfg  test.f90
test-ocn/: .gitignore  namelist.letkf  obsdef.cfg  obstest.cfg  platdef.cfg  statedef.cfg
test/check_norm_grib/: CMakeLists.txt  check_norm_grib.F90
test/check_norm_nc/: CMakeLists.txt  check_norm_nc.F90
test/ioda/: CMakeLists.txt  default.yaml
test/mom6_1deg/: CMakeLists.txt  obsio.obsdef.json  vtloc.json
test/ocean/: CMakeLists.txt  obsio.global.json  obsio.global.yaml  obsio.obsdef.yaml  obsio_nc.yaml  obsio_test.yaml  vtloc.json  vtloc.yaml
test/ocean_mom6/: CMakeLists.txt
test/ocean_mom6.025deg/: CMakeLists.txt
test/ocean_mom6.025deg/config/: bkg  grid  namelist.letkf  obsdef.cfg  platdef.cfg  statedef.cfg
test/ocean_mom6.1deg/: CMakeLists.txt
test/ocean_mom6.1deg/config/: bkg  full.namelist  grid  griddef.cfg  letkf.json  letkf.obsnc.json  letkf.obstest.json  obs  obs_nc.namelist  obs_test.namelist  obsdef.cfg  statedef.cfg  statedef.ts.cfg  testobs.cfg
test/ocean_mom6/config/: bkg  grid  obs  obsio_nc.json  obsio_test.json
test/simple3d/: CMakeLists.txt  bkg  bounds_check.json  bounds_check.yaml  default.json  default.yaml  inflation.json  inflation.yaml  inflation_mul.json  inflation_mul.yaml  inflation_rtpp.json  inflation_rtpp.yaml  inflation_rtps.json  inflation_rtps.yaml  ocean_loc.json
test/wave/: CMakeLists.txt  default.json  default.yaml
